oci/common/istio/kubeflow-istio-resources/overlays/https/patches/kubeflow.Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kubeflow-gateway-tls
  - hosts:
    - "*"
    port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
